src/index.css
@import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

@import "tailwindcss";
/* Fonts theme */
@theme{
    --font-lalezar: "Lalezar", "sans-serif";
    --font-inter: "Inter", "sans-serif";
}


@theme{
    /* Light mode */
    --background-image-auth-light: linear-gradient(90deg, #ffffff 0%, #999999 87%);
    --color-form-light: #ffffff;

    --color-input-light: #f2f2f2;

    --color-text-light: #000000;

    --color-border-light: #000000;


    /* Dark mode */
    --background-image-auth-dark: linear-gradient(90deg, #7D7D7D 0%, #333333 87%);
    --color-form-dark: #595959;

    --color-input-dark: #BDBDBD;

    --color-text-dark: #ffffff;

    --color-border-dark: #AEAEAE;
}

@custom-variant dark (&:where(.dark, .dark *));

